Updated maven-surefire-plugin configuration so that it runs with more perm gen space so we can avoid those irritating out of mem exceptions